[tool.poetry]
name = "diffusionplayground"
version = "0.1.0"
description = ""
authors = ["Yannick Aaron Lehr <yannick.lehr@ioki.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = {path = "nightlytorch/torch-1.14.0.dev20221101-cp39-none-macosx_11_0_arm64.whl"}
torchaudio = {path = "nightlytorch/torchaudio-0.14.0.dev20221101-cp39-cp39-macosx_12_0_arm64.whl"}
torchvision = {path = "nightlytorch/torchvision-0.15.0.dev20221101-cp39-cp39-macosx_11_0_arm64.whl"}
sklearn = "^0.0"
matplotlib = "^3.6.1"
pytorch-lightning = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pylint = "^2.15.3"
black = "^22.8.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
ipykernel = "^6.15.3"
ipynbname = "^2021.3.2"
notebook = "^6.4.12"
toml = "^0.10.2"
nbqa = "^1.5.1"
pyupgrade = "^2.38.2"
mypy = "^0.971"
ipywidgets = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
target-version = ['py37', 'py38']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 100
